Bug 398915 - a locked layer can be modified by a filter
Summary: a locked layer can be modified by a filter
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: 4.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-21 12:08 UTC by katearcher89
Modified: 2018-10-10 09:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description katearcher89 2018-09-21 12:08:45 UTC
it's possible to use filters(both from menu and shortcuts) on locked layers.

How to reproduce:
1. Create a layer.
2. Lock it.
3. Use any filter from the menu or using shortcut(like ctrl-U for HSL or blur filter from the filter menu).
4. The locked layer has been changed.

Expected: Not being able to modify locked layers at all.

Actually it can be useful to be able to change color of a layer without the need to unlock it since it's one click less, but that's kinda inconsistent from the UX point of view. If the layer is locked it is expected to be locked for every activity, not the selected ones(moreover there is no list of what can be applied and what is not).
Comment 1 wkg28406 2018-09-21 22:25:45 UTC
krita-4.2.0-pre-alpha-127857b-x86_64.appimage

confirming
Comment 2 Emmet O'Neill 2018-10-07 19:20:50 UTC
Git commit 83a05fffb07d27b3e8452250a36327923741108e by Emmet O'Neill.
Committed on 07/10/2018 at 19:12.
Pushed by emmetoneill into branch 'master'.

Prevent opening filter dialogs on non-editable layers.

This functionally prevents filters from being used to modify locked
layers.

M  +7    -0    libs/ui/kis_filter_manager.cc

https://commits.kde.org/krita/83a05fffb07d27b3e8452250a36327923741108e
Comment 3 Halla Rempt 2018-10-10 09:56:57 UTC
Git commit 817cc8bb81fb1f269dc0b5eda42588578fd0b4e7 by Boudewijn Rempt, on behalf of Emmet O'Neill.
Committed on 10/10/2018 at 07:40.
Pushed by rempt into branch 'krita/4.1'.

Prevent opening filter dialogs on non-editable layers.

This functionally prevents filters from being used to modify locked
layers.

(cherry picked from commit 83a05fffb07d27b3e8452250a36327923741108e)

M  +7    -0    libs/ui/kis_filter_manager.cc

https://commits.kde.org/krita/817cc8bb81fb1f269dc0b5eda42588578fd0b4e7