Prevent opening filter dialogs on non-editable layers.

BUG: 398915

This functionally prevents filters from being used to modify locked
layers.