libs/ui/kis_filter_manager.cc
@@ -47,6 +47,7 @@
 #include "dialogs/kis_dlg_filter.h"
 #include "strokes/kis_filter_stroke_strategy.h"
 #include "krita_utils.h"
+#include "kis_icon_utils.h"
 
 
 struct KisFilterManager::Private {
@@ -177,6 +178,12 @@ void KisFilterManager::reapplyLastFilter()
 
 void KisFilterManager::showFilterDialog(const QString &filterId)
 {
+    if (!d->view->activeNode()->isEditable()) {
+        d->view->showFloatingMessage(i18n("Cannot apply filter to locked layer."),
+                                      KisIconUtils::loadIcon("object-locked"));
+        return;
+    }
+
     if (d->filterDialog && d->filterDialog->isVisible()) {
         KisFilterSP filter = KisFilterRegistry::instance()->value(filterId);
         d->filterDialog->setFilter(filter);
